# LosslessSegmentationMapCompression

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
source/arithmetic_coder/: acodec.cpp  acodec.h
source/commonlib/: CodingUnit.cpp  CodingUnit.h  arithmetic_codec.cpp  arithmetic_codec.h  coding_unit.cpp  coding_unit.h  commondef.h  global_arithmetic.cpp  global_arithmetic.h  utility.cpp  utility.h
source/decoder/: decOptions.cpp  decOptions.h  decoder.cpp
source/encoder/: encOptions.cpp  encOptions.h  encoder.cpp
